# InferenceLab

./: .gitignore  AGENT.md  AGENTS.md  Makefile  README.md  modelbench_agent_requirements_2.md  modelbench_agent_tech_selection.md  pyproject.toml
.github/workflows/: backend-e2e.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_agent_runtime_settings.py
backend/src/inflab/: __init__.py  agent_executor.py  artifacts.py  autoresearch_integration.py  benchmark.py  benchmark_artifacts.py  company_report.py  config.py  demo_data.py  discovery.py  executor.py  jobs.py  llm_provider.py  logging.py  object_store.py  plugins.py  probe.py  reports.py  schemas.py  security.py  steps.py  tuning.py  worker_tasks.py
backend/src/inflab/api/: __init__.py  app.py  errors.py  health.py  middleware.py  v1.py
backend/src/inflab/db/: __init__.py  models.py  session.py
backend/tests/: conftest.py  test_asyncssh_executor.py  test_backend_units.py  test_config.py  test_control_plane_contract.py  test_errors.py  test_health.py  test_object_store.py  test_real_ssh_opt_in.py
deploy/: compose.yaml
deploy/pm2/: ecosystem.config.cjs
docs/: agent_harness.md  api.md  e2e_acceptance.md  modes_i18n_autoresearch.md  task_list.md
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  api.ts  i18n.ts  main.tsx  mock.ts  styles.css  types.ts
