[project]
name = "inferencelab"
version = "0.1.0"
description = "InferenceLab workspace"
requires-python = ">=3.12"
dependencies = [
    "inflab-backend",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0",
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.0.0,<2.0",
    "ruff>=0.9.0,<1.0",
]

[tool.uv]
package = false

[tool.uv.sources]
inflab-backend = { workspace = true }

[tool.uv.workspace]
members = ["backend"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
src = ["backend/src", "backend/tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"backend/src/inflab/api/v1.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
