[project]
name = "inflab-backend"
version = "0.1.0"
description = "InferenceLab / ModelBench Agent backend control plane"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "pydantic-settings>=2.7.0,<3.0",
    "uvicorn[standard]>=0.34.0,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0",
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.25.0,<1.0",
    "ruff>=0.9.0,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inflab"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
