[project]
name = "inflab-backend"
version = "0.1.0"
description = "InferenceLab / ModelBench Agent backend control plane"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0,<2.0",
    "cryptography>=44.0.0,<47.0",
    "fastapi>=0.115.0,<1.0",
    "jinja2>=3.1.0,<4.0",
    "pydantic-settings>=2.7.0,<3.0",
    "psycopg[binary]>=3.2.0,<4.0",
    "redis>=5.2.0,<7.0",
    "rq>=2.0.0,<3.0",
    "sqlalchemy>=2.0.0,<3.0",
    "uvicorn[standard]>=0.34.0,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0",
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.25.0,<1.0",
    "ruff>=0.9.0,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inflab"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/inflab/api/v1.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
